lib/tests/fixtures/compiler/parser/invalid_hostname.baseline
Error: invalid_hostname.pp:1:6: hostname 'not_valid!' is not valid: only letters, digits, '_', '-', and '.' are allowed.
  node 'not_valid!' {
       ^~~~~~~~~~~~
